Messing around with CSS in character edit page.

--- a/src/app/add-character/add-character.page.html
+++ b/src/app/add-character/add-character.page.html
@@ -12,29 +12,35 @@
     <mat-step [stepControl]="firstFormGroup">
       <form [formGroup]="firstFormGroup">
         <ng-template matStepLabel>Informazioni Generali</ng-template>
-        <mat-form-field class="name-pg">
-          <input matInput placeholder="Nome Personaggio" formControlName="firstCtrl" required>
-        </mat-form-field>
-        <mat-form-field class="race-pg">
-          <input matInput placeholder="Razza" formControlName="firstCtrl" required>
-        </mat-form-field>
-        <mat-form-field class="class-pg" appearance="outline">
-          <mat-label>Classe</mat-label>
-          <mat-select [(value)]="selected">
-            <mat-option *ngFor="let c of classes" [value]="c">
-              {{ c }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <div class="next">
-          <button class="next-button" mat-button matStepperNext color="primary">Next</button>
+        <div class="name-pg">
+          <mat-form-field class="name-pg">
+            <input matInput placeholder="Nome Personaggio" formControlName="firstCtrl" required>
+          </mat-form-field>
+        </div>
+        <div class="race-pg">
+          <mat-form-field class="race-pg">
+            <input matInput placeholder="Razza" formControlName="firstCtrl" required>
+          </mat-form-field>
+        </div>
+        <div class="class-pg">
+          <mat-form-field class="class-pg" appearance="outline">
+            <mat-label>Classe</mat-label>
+            <mat-select [(value)]="selected">
+              <mat-option *ngFor="let c of classes" [value]="c">
+                {{ c }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="next-first">
+          <button class="next-button" mat-button matStepperNext color="primary">Avanti</button>
         </div>
       </form>
     </mat-step>
     <mat-step [stepControl]="secondFormGroup">
       <form [formGroup]="secondFormGroup">
         <ng-template matStepLabel>Caratteristiche</ng-template>
-        <div>
+        <div class="attr-table">
           <table>
             <tr>
               <td>
@@ -43,7 +49,7 @@
                 </mat-form-field>
               </td>
               <td>
-                <mat-form-field class="stat-left">
+                <mat-form-field class="stat">
                   <input matInput type="number" placeholder="INT">
                 </mat-form-field>
               </td>
@@ -55,7 +61,7 @@
                 </mat-form-field>
               </td>
               <td>
-                <mat-form-field class="stat-left">
+                <mat-form-field class="stat">
                   <input matInput type="number" placeholder="DES">
                 </mat-form-field>
               </td>
@@ -67,7 +73,7 @@
                 </mat-form-field>
               </td>
               <td>
-                <mat-form-field class="stat-left">
+                <mat-form-field class="stat">
                   <input matInput type="number" placeholder="SAG">
                 </mat-form-field>
               </td>
@@ -75,14 +81,14 @@
           </table>
         </div>
         <div class="next">
-          <button class="back-button" mat-button matStepperPrevious color="warn">Back</button>
-          <button class="next-button" mat-button matStepperNext color="primary" style="left: 65%">Next</button>
+          <button class="back-button" mat-button matStepperPrevious color="warn">Indietro</button>
+          <button class="next-button" mat-button matStepperNext color="primary" style="left: 65%">Avanti</button>
         </div>
       </form>
     </mat-step>
     <mat-step>
       <ng-template matStepLabel>BAB, TS e simili</ng-template>
-      <div>
+      <div class="attr-table">
         <table>
           <tr>
             <td>
@@ -91,7 +97,7 @@
               </mat-form-field>
             </td>
             <td>
-              <mat-form-field class="stat-left">
+              <mat-form-field class="stat">
                 <input matInput type="number" placeholder="Tempra">
               </mat-form-field>
             </td>
@@ -103,7 +109,7 @@
               </mat-form-field>
             </td>
             <td>
-              <mat-form-field class="stat-left">
+              <mat-form-field class="stat">
                 <input matInput type="number" placeholder="Riflessi">
               </mat-form-field>
             </td>
@@ -115,7 +121,7 @@
               </mat-form-field>
             </td>
             <td>
-              <mat-form-field class="stat-left">
+              <mat-form-field class="stat">
                 <input matInput type="number" placeholder="Volontà">
               </mat-form-field>
             </td>
@@ -123,7 +129,7 @@
         </table>
       </div>
       <div class="next">
-        <button class="back-button" mat-button matStepperPrevious color="warn">Back</button>
+        <button class="back-button" mat-button matStepperPrevious color="warn">Indietro</button>
         <button class="save-button" mat-raised-button routerLink="" color="primary">Salva</button>
       </div>
     </mat-step>
