--- a/src/app/add-character/add-character.page.scss
+++ b/src/app/add-character/add-character.page.scss
@@ -29,19 +29,15 @@
 }
 
 .attr-table {
-  position: center;
   align-content: center;
   align-self: center;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   width: 90%;
   max-width: 500px;
-  margin-right: 5%;
-  margin-left: 5%;
 }
 
 .stat {
-  width: 55%;
+  width: 50%;
   max-width: 200px;
 }
 
