--- a/src/app/edit-character/edit-character.page.html
+++ b/src/app/edit-character/edit-character.page.html
@@ -11,9 +11,9 @@
   <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
     <mat-tab label="Statistiche">
       <div class="attr-table">
-        <table cellspacing="1">
+        <table>
           <tr>
-            <td style="padding-left: 5%">
+            <td>
               <mat-form-field class="stat">
                 <input matInput type="number" placeholder="FOR">
               </mat-form-field>
@@ -25,21 +25,9 @@
             </td>
           </tr>
           <tr>
-            <td style="padding-left: 5%">
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="COS">
-              </mat-form-field>
-            </td>
             <td>
               <mat-form-field class="stat">
                 <input matInput type="number" placeholder="DES">
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td style="padding-left: 5%">
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="CAR">
               </mat-form-field>
             </td>
             <td>
@@ -48,15 +36,24 @@
               </mat-form-field>
             </td>
           </tr>
+          <tr>
+            <td>
+              <mat-form-field class="stat">
+                <input matInput type="number" placeholder="COS">
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="stat">
+                <input matInput type="number" placeholder="CAR">
+              </mat-form-field>
+            </td>
+          </tr>
         </table>
       </div>
-      <div class="tab-label">
-        <span></span>
-      </div>
       <div class="attr-table">
-        <table cellspacing="1">
+        <table>
           <tr>
-            <td style="padding-left: 5%">
+            <td>
               <mat-form-field class="stat">
                 <input matInput type="number" placeholder="Punti Ferita">
               </mat-form-field>
@@ -68,7 +65,7 @@
             </td>
           </tr>
           <tr>
-            <td style="padding-left: 5%">
+            <td>
               <mat-form-field class="stat">
                 <input matInput type="number" placeholder="Bonus Attacco Base">
               </mat-form-field>
@@ -80,7 +77,7 @@
             </td>
           </tr>
           <tr>
-            <td style="padding-left: 5%">
+            <td>
               <mat-form-field class="stat">
                 <input matInput type="number" placeholder="Iniziativa">
               </mat-form-field>
@@ -93,38 +90,31 @@
           </tr>
         </table>
       </div>
-
-      <div class="save-button-div">
-        <button mat-flat-button color="primary" routerLink="" class="save-button">Salva</button>
-      </div>
     </mat-tab>
     <mat-tab label="Informazioni">
-
-      <div class="attr-table">
-        <table cellspacing="1">
-          <tr>
-            <mat-icon matSuffix color="accent">face</mat-icon>
-            <mat-form-field class="name-pg" appearance="outline">
-              <input matInput placeholder="Nome Personaggio">
-            </mat-form-field>
-          </tr>
-          <tr>
-              <mat-form-field class="race-pg">
-                <textarea matInput placeholder="Razza"></textarea>
-              </mat-form-field>
-          </tr>
-          <tr>
-            <mat-form-field class="class-pg" appearance="outline">
-              <mat-label>Classe</mat-label>
-              <mat-select [(value)]="selected">
-                <mat-option *ngFor="let c of classes" [value]="c">
-                  {{ c }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </tr>
-        </table>
+      <div style="width: 100%; text-align: center">
+          <mat-form-field appearance="outline">
+            <input matInput placeholder="Nome Personaggio">
+          </mat-form-field>
+      </div>
+      <div style="text-align: center">
+        <mat-form-field class="race-pg">
+          <textarea matInput placeholder="Razza"></textarea>
+        </mat-form-field>
+      </div>
+      <div style="text-align: center">
+        <mat-form-field class="class-pg" appearance="outline">
+          <mat-label>Classe</mat-label>
+          <mat-select [(value)]="selected">
+            <mat-option *ngFor="let c of classes" [value]="c">
+              {{ c }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
       </div>
     </mat-tab>
   </mat-tab-group>
+  <div class="save-button-div">
+    <button mat-flat-button color="primary" routerLink="" class="save-button">Salva</button>
+  </div>
 </form>
