Add e edit aggiornati, passaggio home-edit non ancora funzionante

--- a/src/app/add-buff/add-buff.page.html
+++ b/src/app/add-buff/add-buff.page.html
@@ -84,7 +84,7 @@
 
 
   <div class="save-button-div">
-    <button mat-flat-button color="primary" routerLink="" class="save-button" (click)="saveBuff($event)">Salva</button>
+    <button mat-flat-button color="primary" class="save-button" (click)="saveBuff($event)">Salva</button>
   </div>
 
 </form>
