--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -93,7 +93,7 @@
                 </div>
               </div>
               <div>
-                <button mat-icon-button routerLink="edit-buff">
+                <button mat-icon-button routerLink="edit-buff" [state]="buff">
                   <mat-icon>edit</mat-icon>
                 </button>
               </div>
