--- a/src/app/edit-character/edit-character.page.html
+++ b/src/app/edit-character/edit-character.page.html
@@ -10,107 +10,109 @@
 <form class="pg-form">
   <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
     <mat-tab label="Statistiche">
-      <div class="attr-table">
-        <table>
-          <tr>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="FOR">
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="INT">
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="DES">
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="SAG">
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="COS">
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="CAR">
-              </mat-form-field>
-            </td>
-          </tr>
-        </table>
+      <div class="row">
+        <div class="column">
+          <mat-form-field class="stat">
+            <input matInput placeholder="FOR">
+          </mat-form-field>
+        </div>
+        <div class="column">
+          <mat-form-field class="stat">
+            <input matInput placeholder="INT">
+          </mat-form-field>
+        </div>
       </div>
-      <div class="attr-table">
-        <table>
-          <tr>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Punti Ferita">
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Tempra">
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Bonus Attacco Base">
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Riflessi">
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Iniziativa">
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Volontà">
-              </mat-form-field>
-            </td>
-          </tr>
-        </table>
+      <div class="row">
+        <div class="column">
+          <mat-form-field class="stat">
+            <input matInput placeholder="DES">
+          </mat-form-field>
+        </div>
+        <div class="column">
+          <mat-form-field class="stat">
+            <input matInput placeholder="SAG">
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <mat-form-field class="stat">
+            <input matInput placeholder="COS">
+          </mat-form-field>
+        </div>
+        <div class="column">
+          <mat-form-field class="stat">
+            <input matInput placeholder="CAR">
+          </mat-form-field>
+        </div>
+      </div>
+      <div style="padding-top: 7%">
+        <div class="row">
+          <div class="column">
+            <mat-form-field class="stat">
+              <input matInput placeholder="Punti Ferita">
+            </mat-form-field>
+          </div>
+          <div class="column">
+            <mat-form-field class="stat">
+              <input matInput placeholder="Tempra">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <mat-form-field class="stat">
+              <input matInput placeholder="Bonus Attacco Base">
+            </mat-form-field>
+          </div>
+          <div class="column">
+            <mat-form-field class="stat">
+              <input matInput placeholder="Riflessi">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <mat-form-field class="stat">
+              <input matInput placeholder="Iniziativa">
+            </mat-form-field>
+          </div>
+          <div class="column">
+            <mat-form-field class="stat">
+              <input matInput placeholder="Volontà">
+            </mat-form-field>
+          </div>
+        </div>
       </div>
     </mat-tab>
     <mat-tab label="Informazioni">
-      <div style="width: 100%; text-align: center">
-          <mat-form-field appearance="outline">
-            <input matInput placeholder="Nome Personaggio">
-          </mat-form-field>
-      </div>
       <div style="text-align: center">
-        <mat-form-field class="race-pg">
-          <textarea matInput placeholder="Razza"></textarea>
-        </mat-form-field>
-      </div>
-      <div style="text-align: center">
-        <mat-form-field class="class-pg" appearance="outline">
-          <mat-label>Classe</mat-label>
-          <mat-select [(value)]="selected">
-            <mat-option *ngFor="let c of classes" [value]="c">
-              {{ c }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <div class="info-row">
+          <div class="info-col">
+            <mat-form-field appearance="outline" style="width: 90%; margin-top: 5%">
+              <input matInput placeholder="Nome Personaggio">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="info-row">
+          <div class="info-col">
+            <mat-form-field appearance="outline" style="width: 90%">
+              <input matInput placeholder="Razza">
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="info-row">
+          <div class="info-col">
+            <mat-form-field appearance="outline" style="width: 90%">
+              <mat-label>Classe</mat-label>
+              <mat-select [(value)]="selected">
+                <mat-option *ngFor="let c of classes" [value]="c">
+                  {{ c }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
       </div>
     </mat-tab>
   </mat-tab-group>
