--- a/src/app/edit-character/edit-character.page.scss
+++ b/src/app/edit-character/edit-character.page.scss
@@ -7,6 +7,26 @@
   align-items: center;
   justify-content: center;
   margin-top: 5rem;
+  max-width: 500px;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+}
+
+.column {
+  flex: 50%;
+  text-align: center;
+}
+
+.info-row {
+  display: flex;
+}
+
+.info-col {
+  flex: 90%;
+  text-align: center;
 }
 
 .attr-table {
