Add-buff e edit-buff ruoting con passaggio variabili

--- a/src/app/edit-buff/edit-buff.page.html
+++ b/src/app/edit-buff/edit-buff.page.html
@@ -84,7 +84,7 @@
 
 
   <div class="save-button-div">
-    <button mat-flat-button color="accent" routerLink="" class="del-button">Elimina</button>
+    <button mat-flat-button color="accent" (click)="delBuff($event)" class="del-button">Elimina</button>
   </div>
 
 </form>
