Characters are now put in the storage when created

--- a/src/app/add-character/add-character.page.scss
+++ b/src/app/add-character/add-character.page.scss
@@ -28,6 +28,24 @@
   align-content: center;
 }
 
+.level-pg {
+  flex: 50%;
+  text-align: center;
+  max-width: 100px;
+}
+
+.size-pg {
+  flex: 50%;
+  text-align: center;
+  max-width: 100px;
+  padding-left: 5%;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+}
+
 .attr-table {
   align-content: center;
   align-self: center;
