--- a/src/app/add-character/add-character.page.html
+++ b/src/app/add-character/add-character.page.html
@@ -14,23 +14,45 @@
         <ng-template matStepLabel>Informazioni Generali</ng-template>
         <div class="name-pg">
           <mat-form-field class="name-pg">
-            <input matInput placeholder="Nome Personaggio" formControlName="firstCtrl" required>
+            <input matInput placeholder="Nome Personaggio" formControlName="firstCtrl" [(ngModel)]="character.name">
           </mat-form-field>
         </div>
         <div class="race-pg">
           <mat-form-field class="race-pg">
-            <input matInput placeholder="Razza" formControlName="firstCtrl" required>
+            <input matInput placeholder="Razza" formControlName="firstCtrl" [(ngModel)]="character.race">
           </mat-form-field>
         </div>
         <div class="class-pg">
           <mat-form-field class="class-pg" appearance="outline">
             <mat-label>Classe</mat-label>
-            <mat-select [(value)]="selected">
+            <mat-select [(ngModel)]="character.classe" formControlName="firstCtrl">
               <mat-option *ngFor="let c of classes" [value]="c">
                 {{ c }}
               </mat-option>
             </mat-select>
           </mat-form-field>
+        </div>
+        <div class="row">
+          <div class="level-pg">
+            <mat-form-field style="max-width: 100px" appearance="outline">
+              <mat-label>Livello</mat-label>
+              <mat-select [(ngModel)]="character.level" formControlName="firstCtrl">
+                <mat-option *ngFor="let level of levels" [value]="level">
+                  {{ level }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="size-pg">
+            <mat-form-field style="max-width: 100px" appearance="outline">
+              <mat-label>Taglia</mat-label>
+              <mat-select [(ngModel)]="character.size" formControlName="firstCtrl">
+                <mat-option *ngFor="let size of sizes" [value]="size">
+                  {{ size }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
         </div>
         <div class="next-first">
           <button class="next-button" mat-button matStepperNext color="primary">Avanti</button>
@@ -45,36 +67,36 @@
             <tr>
               <td>
                 <mat-form-field class="stat">
-                  <input matInput type="number" placeholder="FOR">
+                  <input matInput type="number" formControlName="secondCtrl" placeholder="FOR" [(ngModel)]="character.characteristics.strength">
                 </mat-form-field>
               </td>
               <td>
                 <mat-form-field class="stat">
-                  <input matInput type="number" placeholder="INT">
-                </mat-form-field>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <mat-form-field class="stat">
-                  <input matInput type="number" placeholder="DES">
-                </mat-form-field>
-              </td>
-              <td>
-                <mat-form-field class="stat">
-                  <input matInput type="number" placeholder="SAG">
+                  <input matInput type="number" formControlName="secondCtrl" placeholder="INT" [(ngModel)]="character.characteristics.intelligence">
                 </mat-form-field>
               </td>
             </tr>
             <tr>
               <td>
                 <mat-form-field class="stat">
-                  <input matInput type="number" placeholder="COS">
+                  <input matInput type="number" formControlName="secondCtrl" placeholder="DES" [(ngModel)]="character.characteristics.dexterity">
                 </mat-form-field>
               </td>
               <td>
                 <mat-form-field class="stat">
-                  <input matInput type="number" placeholder="CAR">
+                  <input matInput type="number" formControlName="secondCtrl" placeholder="SAG" [(ngModel)]="character.characteristics.wisdom">
+                </mat-form-field>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <mat-form-field class="stat">
+                  <input matInput type="number" formControlName="secondCtrl" placeholder="COS" [(ngModel)]="character.characteristics.constitution">
+                </mat-form-field>
+              </td>
+              <td>
+                <mat-form-field class="stat">
+                  <input matInput type="number" formControlName="secondCtrl" placeholder="CAR" [(ngModel)]="character.characteristics.charisma">
                 </mat-form-field>
               </td>
             </tr>
@@ -93,36 +115,48 @@
           <tr>
             <td>
               <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Punti Ferita">
+                <input matInput type="number" placeholder="Punti Ferita" [(ngModel)]="character.hp">
               </mat-form-field>
             </td>
             <td>
               <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Tempra">
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="BAB">
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Riflessi">
+                <input matInput type="number" placeholder="Tempra" [(ngModel)]="character.st.fortitude">
               </mat-form-field>
             </td>
           </tr>
           <tr>
             <td>
               <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Iniziativa">
+                <input matInput type="number" placeholder="BAB" [(ngModel)]="character.bab">
               </mat-form-field>
             </td>
             <td>
               <mat-form-field class="stat">
-                <input matInput type="number" placeholder="Volontà">
+                <input matInput type="number" placeholder="Riflessi" [(ngModel)]="character.st.reflex">
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <mat-form-field class="stat">
+                <input matInput type="number" placeholder="Iniziativa" [(ngModel)]="character.initiative">
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="stat">
+                <input matInput type="number" placeholder="Volontà" [(ngModel)]="character.st.will">
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr style="padding-top: 5%">
+            <td>
+              <mat-form-field class="stat">
+                <input matInput type="number" placeholder="Classe Armatura" [(ngModel)]="character.ac">
+              </mat-form-field>
+            </td>
+            <td>
+              <mat-form-field class="stat">
+                <textarea matInput type="string" placeholder="Danni Arma" [(ngModel)]="character.weapon_dice"></textarea>
               </mat-form-field>
             </td>
           </tr>
@@ -130,7 +164,7 @@
       </div>
       <div class="next">
         <button class="back-button" mat-button matStepperPrevious color="warn">Indietro</button>
-        <button class="save-button" mat-raised-button routerLink="" color="primary">Salva</button>
+        <button class="save-button" mat-raised-button color="primary" (click)="saveCharacter($event)">Salva</button>
       </div>
     </mat-step>
   </mat-horizontal-stepper>
