--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,6 +6,7 @@
                     <mat-icon aria-label="close">close</mat-icon>
                 </button>
             </mat-toolbar>
+            <!--
             <mat-nav-list>
                 <a id="pg1" mat-list-item (click)="onSelChange('Arthas');drawer.toggle()">
                     <mat-icon aria-label="face">face</mat-icon>
@@ -34,6 +35,21 @@
                     </mat-grid-tile>
                 </mat-grid-list>
             </mat-nav-list>
+            -->
+            <mat-nav-list *ngFor="let c of allCharacters">
+                <a id="pg" mat-list-item (click)="onSelChange(c.name);drawer.toggle()">
+                    <mat-icon aria-label="face">face</mat-icon>
+                    <mat-label style="padding-left: 5%">{{ c.name }}</mat-label>
+                    <button class="edit-char-button" mat-icon-button routerLink="edit-character">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                </a>
+            </mat-nav-list>
+            <mat-grid-list cols="1">
+                <mat-grid-tile>
+                    <button mat-raised-button class="new-button" (click)="addCharacter(); drawer.toggle()" color="primary">Nuovo</button>
+                </mat-grid-tile>
+            </mat-grid-list>
         </mat-drawer>
 
         <div class="sidenav-content">
