Logica di aggiornamento per combat

--- a/src/app/edit-buff/edit-buff.page.html
+++ b/src/app/edit-buff/edit-buff.page.html
@@ -21,7 +21,7 @@
   <table cellspacing="0"><tr>
     <td><mat-icon matSuffix color="accent" class="icon-add-buff">fitness_center</mat-icon></td>
     <td><mat-form-field type="number" class="ts-buff">
-      <input matInput placeholder="Bonus Tiro" [(ngModel)]="buffToEdit.hit" name="hit_e">
+      <input matInput type="number" placeholder="Bonus Tiro" [(ngModel)]="buffToEdit.hit" name="hit_e">
     </mat-form-field></td>
     <td><mat-form-field class="ts-buff">
       <input matInput type="number" placeholder="Bonus Danni" [(ngModel)]="buffToEdit.damage" name="damage_e">
