--- a/src/app/add-buff/add-buff.page.html
+++ b/src/app/add-buff/add-buff.page.html
@@ -21,7 +21,7 @@
   <table cellspacing="0"><tr>
     <td><mat-icon matSuffix color="accent" class="icon-add-buff">fitness_center</mat-icon></td>
     <td><mat-form-field type="number" class="ts-buff">
-      <input matInput placeholder="Bonus Tiro" [(ngModel)]="buff.hit" name="hit">
+      <input matInput type="number" placeholder="Bonus Tiro" [(ngModel)]="buff.hit" name="hit">
     </mat-form-field></td>
     <td><mat-form-field class="ts-buff">
       <input matInput type="number" placeholder="Bonus Danni" [(ngModel)]="buff.damage" name="damage">
