Characters are deleted from the list when the "delete" button is clicked

--- a/src/app/add-character/add-character.page.html
+++ b/src/app/add-character/add-character.page.html
@@ -14,7 +14,7 @@
         <ng-template matStepLabel>Informazioni Generali</ng-template>
         <div class="name-pg">
           <mat-form-field class="name-pg">
-            <input matInput placeholder="Nome Personaggio" formControlName="firstCtrl" [(ngModel)]="character.name">
+            <input matInput placeholder="Nome Personaggio" formControlName="firstCtrl" [(ngModel)]="character.name" required>
           </mat-form-field>
         </div>
         <div class="race-pg">
