--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,41 +6,12 @@
                 <mat-icon aria-label="close">close</mat-icon>
             </button>
         </mat-toolbar>
-        <!--
-        <mat-nav-list>
-            <a id="pg1" mat-list-item (click)="onSelChange('Arthas');drawer.toggle()">
-                <mat-icon aria-label="face">face</mat-icon>
-                <mat-label style="padding-left: 5%">Arthas</mat-label>
-                <button class="edit-char-button" mat-icon-button routerLink="edit-character">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </a>
-            <a id="pg2" mat-list-item (click)="onSelChange('Sharrim');drawer.toggle()">
-                <mat-icon aria-label="face">face</mat-icon>
-                <mat-label style="padding-left: 5%">Sharrim</mat-label>
-                <button class="edit-char-button" mat-icon-button routerLink="edit-character">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </a>
-            <a id="pg3" mat-list-item (click)="onSelChange('Vel\'Koz');drawer.toggle()">
-                <mat-icon aria-label="face">face</mat-icon>
-                <mat-label style="padding-left: 5%">Vel'Koz</mat-label>
-                <button class="edit-char-button" mat-icon-button routerLink="edit-character">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </a>
-            <mat-grid-list cols="1">
-                <mat-grid-tile>
-                    <button mat-raised-button class="new-button" routerLink="add-character" color="primary">Nuovo</button>
-                </mat-grid-tile>
-            </mat-grid-list>
-        </mat-nav-list>
-        -->
+
         <mat-nav-list *ngFor="let c of allCharacters">
             <a id="pg" mat-list-item (click)="onSelChange(c.name);drawer.toggle()">
                 <mat-icon aria-label="face">face</mat-icon>
                 <mat-label style="padding-left: 5%">{{ c.name }}</mat-label>
-                <button class="edit-char-button" mat-icon-button routerLink="edit-character">
+                <button class="edit-char-button" mat-icon-button (click)="editCharacter($event, c)">
                     <mat-icon>edit</mat-icon>
                 </button>
             </a>
